update dev dependencies: webpack, webpack-dev-server, webpack-cli, html-webpack-plugin, vue-loader

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "flush-promises": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "generate-changelog": "^1.6.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^21.2.0",
     "jest-fetch-mock": "^1.4.2",
@@ -138,13 +138,14 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "14.2.2",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "2.6.12",
     "vue-test-utils": "^1.0.0-beta.8",
-    "webpack": "^3.6.0",
+    "webpack": "4.33.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^3.1.11",
+    "webpack-cli": "3.3.3",
+    "webpack-dev-server": "3.7.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
