--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "generate-files-json": "./src/supported-files/index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.213.0",
     "animejs": "^2.2.0",
     "async-validator": "^1.8.2",
     "aws-amplify": "^3.3.26",
